<resources>
    <string name="app_name">TestServise</string>
    <string name="button">Start</string>
    <string name="enter_music_url">Enter music url</string>
    <string name="stop">Stop</string>
    <string name="clear_url">Clear URL</string>
    <string name="file_not_found">MP3 not found :(</string>
    <string name="url">https://cdns-preview-d.dzcdn.net/stream/c-deda7fa9316d9e9e880d2c6207e92260-5.mp3</string>
    <string name="track_image">track image</string>
    <string name="album">Discovery</string>
    <string name="track">Harder, Better, Faster, Stronger</string>
</resources>
